# Multi-Core-Programming

./: CMakeLists.txt  README.md
CUDA_Lecture1/: CMakeLists.txt  CheckDim.cu  VectorSum.cu
CUDA_Lecture2/: CMakeLists.txt  MatMul_singleBlock.cu
CUDA_Lecture4/: CMakeLists.txt  CUDA_Event.cu  Stream.cu  ThreadCounting.cu
DSTimer/: CMakeLists.txt  DS_definitions.h  DS_timer.cpp  DS_timer.h
OpenMP_Lecture1/: After_PrivateClause.cpp  CMakeLists.txt  LoopConst_implicitBar.cpp  Loop_construct.cpp  Private_clause.cpp  Private_error.cpp  ScopeOfVar_1.cpp  ScopeOfVar_2.cpp  ScopeOfVar_3.cpp  Section_construct.cpp  Shared_Priavte_Clauses.cpp  Shared_clause.cpp  Single_construct.cpp  VecSum.cpp  VecSum_loopConst.cpp  firstPrivate.cpp  if_caluse.cpp  lastPrivate.cpp  lastPrivate2.cpp  nowait.cpp
OpenMP_Lecture2/: Atomic.cpp  Barrier.cpp  Barrier_Step.cpp  CMakeLists.txt  Producer_Consumer.cpp  Trapezodial_Critical_Locking.cpp
OpenMP_Lecture3/: CMakeLists.txt  Guided_scheduling.cpp  Nested_Parallelism.cpp  Trapezodial_reduction.cpp
OpenMP_Trapezoidal/: CMakeLists.txt  Trapezoidal.cpp  parameters.h
OpenMp_Lecture3/: CMakeLists.txt  Dynamic_scheduling.cpp  Static_scheduling.cpp
